--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dokan = "0.1.0+dokan131"
+dokan = "0.1.0"
 nom = "6"
+fnv = "1.0.7"
