--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 dokan = "0.1.0"
+widestring = "0.4.3"
+winapi = "0.3.9"
 nom = "6"
 fnv = "1.0.7"
 clap = "2.33.3"
