--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,5 +21,6 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         path: target/release/pd2tools-rust.exe
+        name: pd2tools-rust.exe
 #    - name: Run tests
 #      run: cargo test --verbose
