--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ winapi = "0.3.9"
 fnv = "1.0.7"
 clap = "2.33.3"
 xmlwriter = "0.1.0"
-nom = "6.1.2"
+rayon = "1.5.0"
 xmlparser = "0.13.3"
+chrono = "0.4"
 
 [workspace]
 members = [ "xmlparser" ]
