--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ xmlwriter = "0.1.0"
 rayon = "1.5.0"
 xmlparser = "0.13.3"
 chrono = "0.4"
+roxmltree = "0.14.0"
+anyhow = "1.0.39"
 
 [workspace]
 members = [ "xmlparser" ]
