--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ xmlparser = "0.13.3"
 chrono = "0.4"
 roxmltree = "0.14.0"
 anyhow = "1.0.39"
+structopt = "0.3.21"
 
 [workspace]
 members = [ "xmlparser" ]
