--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ chrono = "0.4"
 roxmltree = "0.14.0"
 anyhow = "1.0.39"
 structopt = "0.3.21"
+nom = "6.1.2"
 
 [workspace]
 members = [ "xmlparser" ]
