--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ roxmltree = "0.14.0"
 anyhow = "1.0.39"
 structopt = "0.3.21"
 nom = "6.1.2"
+nom-derive = "0.8.0"
 
 [workspace]
 members = [ "xmlparser" ]
