--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ edition = "2018"
 [profile.release]
 lto = true
 
+[features]
+default = []
+
 [dependencies]
-dokan = "0.1.0"
+dokan = { version = "0.1.0", optional = true }
 widestring = "0.4.3"
 winapi = "0.3.9"
 fnv = "1.0.7"
