--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,11 @@ anyhow = "1.0.39"
 structopt = "0.3.21"
 nom = "6.1.2"
 nom-derive = "0.8.0"
+vek = "0.15.1"
+pd2tools-macros = { path = './macros' }
 
 [workspace]
-members = [ "xmlparser" ]
+members = [ "xmlparser", "fdm_python", "macros" ]
 
 [patch.crates-io]
 xmlparser = { path = 'xmlparser' }
