Improve importing of meshes

--- a/fdm_python/Cargo.toml
+++ b/fdm_python/Cargo.toml
@@ -16,4 +16,6 @@ features = ["extension-module", "abi3-py36"]
 
 [dependencies]
 pd2tools-rust = { path = ".." }
+pd2tools-macros = { path = "../macros" }
 vek = "0.15.1"
+nom = "6.1.2"
