Report versions of binary components based on commit id

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ structopt = "0.3.21"
 nom = "6.1.2"
 vek = "0.15.1"
 num-traits = "0.2.14"
+git-version = "0.3.4"
+
 pd2tools-macros = { path = './macros' }
 
 [workspace]
