--- a/blender/fdm_python/Cargo.toml
+++ b/blender/fdm_python/Cargo.toml
@@ -15,8 +15,8 @@ branch = "main"
 features = ["extension-module", "abi3-py36"]
 
 [dependencies]
-pd2tools-rust = { path = ".." }
-pd2tools-macros = { path = "../macros" }
+pd2tools-rust = { path = "../.." }
+pd2tools-macros = { path = "../../macros" }
 vek = "0.15.1"
 nom = "6.1.2"
 thiserror = "1.0.25"
