--- a/bundlefs/Cargo.toml
+++ b/bundlefs/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.21"
 pd2tools-rust = { path = ".." }
+
+dokan = "0.1.0"
+structopt = "0.3.21"
+widestring = "0.4.3"
+winapi = "0.3.9"
