--- a/scriptdata/Cargo.toml
+++ b/scriptdata/Cargo.toml
@@ -15,9 +15,7 @@ either = "1.6.1"
 logos = "0.12.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
+chumsky = "0.6.0"
 
 pd2tools-macros = { path = '../macros' }
 ego-tree = "0.6.2"
-
-[patch.crates-io]
-xmlparser = { path = '../xmlparser' }
