--- a/scriptdata/Cargo.toml
+++ b/scriptdata/Cargo.toml
@@ -15,7 +15,8 @@ either = "1.6.1"
 logos = "0.12.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
-chumsky = "0.6.0"
+chumsky = "0.8.0"
+ego-tree = "0.6.2"
 
 pd2tools-macros = { path = '../macros' }
-ego-tree = "0.6.2"
+diesel_hash = { path = '../diesel_hash' }
