Sub-minor twiddling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ thiserror = "1.0.30"
 pd2tools-macros = { path = './macros' }
 diesel_hash = { path = './diesel_hash' }
 steam = { path = "./steam" }
+scriptdata = { path = "./scriptdata" }
 
 [workspace]
 members = [ "xmlparser", "blender/fdm_python", "macros", "diesel_hash", "bundlefs", "steam", "scriptdata" ]
