--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "pd2tools-rust"
 version = "0.1.0"
 authors = ["Kythyria Tieran <kythyria@berigora.net>"]
 edition = "2018"
+default-run = "pd2tools"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
