--- a/blender/fdm_python/Cargo.toml
+++ b/blender/fdm_python/Cargo.toml
@@ -18,7 +18,7 @@ features = ["extension-module", "abi3-py37"]
 pd2tools-rust = { path = "../.." }
 pd2tools-macros = { path = "../../macros" }
 vek = "0.15.1"
-nom = "6.1.2"
+slotmap = "1.0.6"
 thiserror = "1.0.25"
 itertools = "0.10.3"
 enumflags2 = "0.7.5"
