--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,12 @@ vek = "0.15.1"
 num-traits = "0.2.14"
 git-version = "0.3.5"
 thiserror = "1.0.30"
+slotmap = "1.0.6"
 
 pd2tools-macros = { path = './macros' }
 steam = { path = "./steam" }
 scriptdata = { path = "./scriptdata" }
+gc = { version = "0.4.1", features = ["derive"] }
 
 [workspace]
 members = [ "xmlparser", "blender/fdm_python", "macros", "bundlefs", "steam", "scriptdata" ]
