--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ roxmltree = "0.14.0"
 anyhow = "1.0.39"
 structopt = "0.3.21"
 nom = "6.1.2"
-vek = "0.15.1"
+vek = { version = "0.15.10", features = [ "bytemuck" ] }
 num-traits = "0.2.14"
 git-version = "0.3.5"
 thiserror = "1.0.30"
