--- a/blender/fdm_python/Cargo.toml
+++ b/blender/fdm_python/Cargo.toml
@@ -22,4 +22,6 @@ slotmap = "1.0.6"
 thiserror = "1.0.25"
 itertools = "0.10.3"
 enumflags2 = "0.7.5"
-bytemuck = "1.13.1"
+bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
+bytemuck_derive = "1.4.1"
+num-traits = "0.2.15"
