--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,11 @@ pd2tools-macros = { path = './macros' }
 steam = { path = "./steam" }
 scriptdata = { path = "./scriptdata" }
 gc = { version = "0.4.1", features = ["derive"] }
+itertools = "0.10.5"
+chumsky = "0.9.2"
+proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
+syn = "2.0.18"
+# miette = "5.9.0"
 
 [workspace]
 members = [ "xmlparser", "blender/fdm_python", "macros", "bundlefs", "steam", "scriptdata" ]
